# Folio-OCR

./: .dockerignore  .gitignore  =1.1.0  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  latex_unicode.json  pyproject.toml  requirements.txt  script.js  server.py  start.bat  style.css  test_table.docx
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
docs/: demo.html  index.html
folio_ocr/: __init__.py  script.js  server.py
scripts/: verify.sh
tests/: test_exports_and_postprocess.py
